# sum_pointclouds

./: CMakeLists.txt
include/: addCloud.hpp  getRotationVector.hpp
src/: addCloud.cpp  add_cloud.cpp  getRotationVector.cpp
